--- a/Ranked/packages.config
+++ b/Ranked/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net471" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net471" />
-  <package id="MySql.Data" version="8.0.16" targetFramework="net471" />
+  <package id="MySqlConnector" version="0.56.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net471" />
 </packages>
